fix contrast ratio with muted text

--- a/public/styles/variables.css
+++ b/public/styles/variables.css
@@ -2,7 +2,7 @@
   --color-accent: #ea3b53;
   --color-primary: #59c6b6;
   --color-primary-muted: #56ada0;
-  --color-muted: #77a09a;
+  --color-muted: #8fc1ba;
   --color-light: #dcf4f1;
   --color-text: #354249;
 }
